# libudmaio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  cross-cmake.sh  doxygen-header.html  index.html  refactor-and-unittest-support.md
.github/workflows/: doxygen.yml
docs/: dma_mgmt_components.drawio  example.html  libudmaio.html
example/: DmaMode.hpp  Doxyfile  axi_dma_demo.cpp
example/demo_python/: GpioStatus.py  ProjectConsts.py  TrafficGen.py  axi_dma_demo.py
example/html/: _axi_dma_8hpp.html  _axi_dma_8hpp__dep__incl.map  _axi_dma_8hpp__dep__incl.md5  _axi_dma_8hpp__incl.md5  _axi_dma_8hpp_source.html  _axi_traffic_gen_lfsr_8hpp.html  _axi_traffic_gen_lfsr_8hpp.js  _axi_traffic_gen_lfsr_8hpp__dep__incl.map  _axi_traffic_gen_lfsr_8hpp__dep__incl.md5  _axi_traffic_gen_lfsr_8hpp__incl.map  _axi_traffic_gen_lfsr_8hpp__incl.md5  _axi_traffic_gen_lfsr_8hpp_source.html  _axi_vdma_8hpp.html  _axi_vdma_8hpp__dep__incl.map  _axi_vdma_8hpp__dep__incl.md5  _axi_vdma_8hpp_source.html  _concurrent_queue_8hpp.html  _concurrent_queue_8hpp__dep__incl.map  _concurrent_queue_8hpp__dep__incl.md5  _concurrent_queue_8hpp__incl.map  _concurrent_queue_8hpp__incl.md5  _concurrent_queue_8hpp_source.html  _data_handler_abstract_8hpp.html  _data_handler_abstract_8hpp__dep__incl.map  _data_handler_abstract_8hpp__dep__incl.md5  _data_handler_abstract_8hpp__incl.map  _data_handler_abstract_8hpp__incl.md5  _data_handler_abstract_8hpp_source.html  _data_handler_print_8cpp.html  _data_handler_print_8cpp__incl.map  _data_handler_print_8cpp__incl.md5  _data_handler_print_8hpp.html  _data_handler_print_8hpp.js  _data_handler_print_8hpp__dep__incl.map  _data_handler_print_8hpp__dep__incl.md5  _data_handler_print_8hpp__incl.map  _data_handler_print_8hpp__incl.md5  _data_handler_print_8hpp_source.html  _data_handler_sync_8hpp.html  _data_handler_sync_8hpp__incl.map  (+595 more)
example/inc/: AxiTrafficGenLfsr.hpp  DataHandlerPrint.hpp  DmaMode.hpp  UioGpioStatus.hpp  UioTrafficGen.hpp  ZupExampleProjectConsts.hpp
example/latex/: _axi_dma_8hpp.tex  _axi_dma_8hpp__dep__incl.dot  _axi_dma_8hpp_source.tex  _axi_traffic_gen_lfsr_8hpp.tex  _axi_traffic_gen_lfsr_8hpp__dep__incl.dot  _axi_traffic_gen_lfsr_8hpp__incl.dot  _axi_traffic_gen_lfsr_8hpp_source.tex  _axi_vdma_8hpp.tex  _axi_vdma_8hpp__dep__incl.dot  _concurrent_queue_8hpp.tex  _concurrent_queue_8hpp__dep__incl.dot  _concurrent_queue_8hpp__incl.dot  _concurrent_queue_8hpp_source.tex  _data_handler_abstract_8hpp.tex  _data_handler_abstract_8hpp__dep__incl.dot  _data_handler_abstract_8hpp__incl.dot  _data_handler_abstract_8hpp_source.tex  _data_handler_print_8cpp.tex  _data_handler_print_8cpp__incl.dot  _data_handler_print_8hpp.tex  _data_handler_print_8hpp__dep__incl.dot  _data_handler_print_8hpp__incl.dot  _data_handler_print_8hpp_source.tex  _data_handler_sync_8hpp.tex  _data_handler_sync_8hpp__incl.dot  _data_handler_sync_8hpp_source.tex  _dma_buffer_abstract_8hpp.tex  _dma_buffer_abstract_8hpp__dep__incl.dot  _dma_buffer_abstract_8hpp__incl.dot  _dma_buffer_abstract_8hpp_source.tex  _fpga_mem_buffer_over_axi_8hpp.tex  _fpga_mem_buffer_over_axi_8hpp__dep__incl.dot  _fpga_mem_buffer_over_axi_8hpp__incl.dot  _fpga_mem_buffer_over_axi_8hpp_source.tex  _fpga_mem_buffer_over_xdma_8hpp.tex  _fpga_mem_buffer_over_xdma_8hpp__dep__incl.dot  _frame_format_8hpp.tex  _frame_format_8hpp__dep__incl.dot  _frame_format_8hpp__incl.dot  _frame_format_8hpp_source.tex  (+184 more)
example/src/: DataHandlerPrint.cpp  UioTrafficGen.cpp  axi_dma_demo.cpp
inc/: AxiTrafficGenLfsr.hpp  DataHandlerAbstract.hpp  DataHandlerPrint.hpp  DmaBufferAbstract.hpp  FpgaDdr4Buffer.hpp  UDmaBuf.hpp  UioAxiDmaIf.hpp  UioIf.hpp  UioIfFactory.hpp  UioMemSgdma.hpp  UioTrafficGen.hpp
inc/udmaio/: BoostPCH.hpp  ConcurrentQueue.hpp  DataHandlerAbstract.hpp  DataHandlerSync.hpp  DmaBufferAbstract.hpp  FpgaDdr4Buffer.hpp  FpgaMemBuffer.hpp  FpgaMemBufferOverAxi.hpp  FpgaMemBufferOverXdma.hpp  FrameFormat.hpp  HwAccessor.hpp  Logging.hpp  RegAccessor.hpp  UDmaBuf.hpp  UioAxiDmaIf.hpp  UioAxiVdmaIf.hpp  UioConfig.hpp  UioIf.hpp  UioIfFactory.hpp  UioMemSgdma.hpp
libudmaio/html/: _axi_dma_8hpp.html  _axi_dma_8hpp.js  _axi_dma_8hpp__dep__incl.map  _axi_dma_8hpp__dep__incl.md5  _axi_dma_8hpp__incl.map  _axi_dma_8hpp_source.html  _axi_vdma_8hpp.html  _axi_vdma_8hpp.js  _axi_vdma_8hpp__dep__incl.map  _axi_vdma_8hpp__dep__incl.md5  _axi_vdma_8hpp__incl.map  _axi_vdma_8hpp__incl.md5  _axi_vdma_8hpp_source.html  _boost_p_c_h_8hpp.html  _boost_p_c_h_8hpp__incl.map  _boost_p_c_h_8hpp__incl.md5  _boost_p_c_h_8hpp_source.html  _concurrent_queue_8hpp.html  _concurrent_queue_8hpp.js  _concurrent_queue_8hpp__dep__incl.map  _concurrent_queue_8hpp__dep__incl.md5  _concurrent_queue_8hpp__incl.map  _concurrent_queue_8hpp_source.html  _data_handler_abstract_8cpp.html  _data_handler_abstract_8cpp__incl.map  _data_handler_abstract_8cpp__incl.md5  _data_handler_abstract_8hpp.html  _data_handler_abstract_8hpp.js  _data_handler_abstract_8hpp__dep__incl.map  _data_handler_abstract_8hpp__dep__incl.md5  _data_handler_abstract_8hpp__incl.map  _data_handler_abstract_8hpp__incl.md5  _data_handler_abstract_8hpp_source.html  _data_handler_sync_8cpp.html  _data_handler_sync_8cpp__incl.map  _data_handler_sync_8cpp__incl.md5  _data_handler_sync_8hpp.html  _data_handler_sync_8hpp.js  _data_handler_sync_8hpp__dep__incl.map  _data_handler_sync_8hpp__dep__incl.md5  (+525 more)
libudmaio/latex/: _axi_dma_8hpp.tex.tmp  _axi_dma_8hpp__dep__incl.dot  _axi_dma_8hpp__incl.dot  _axi_dma_8hpp_source.tex  _axi_vdma_8hpp__dep__incl.dot  _axi_vdma_8hpp__incl.dot  _axi_vdma_8hpp_source.tex  _boost_p_c_h_8hpp.tex  _boost_p_c_h_8hpp.tex.tmp  _boost_p_c_h_8hpp__incl.dot  _boost_p_c_h_8hpp_source.tex  (+189 more)
pyudmaio/: pyproject.toml  setup.py
src/: DataHandlerAbstract.cpp  DataHandlerPrint.cpp  DataHandlerSync.cpp  DmaBufferAbstract.cpp  FrameFormat.cpp  HwAccessor.cpp  Logging.cpp  UDmaBuf.cpp  UioAxiDmaIf.cpp  UioAxiVdmaIf.cpp  UioConfig.cpp  UioIf.cpp  UioMemSgdma.cpp  UioTrafficGen.cpp  axi_dma_demo.cpp
tests/: test_UioMemSgdma.cpp
(+222 files in other folders)
